<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.0-M1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>org.siriusxi.fa</groupId>
    <artifactId>flight-advisor</artifactId>
    <version>6.0</version>
    <name>Flight Advisor API</name>
    <description>Flight Advisor API Spring Boot based Application.</description>
    <packaging>jar</packaging>

    <!-- Start - Flight Advisor API Project Owner -->
    <developers>
        <developer>
            <id>0001</id>
            <name>Mohamed Taman</name>
            <email>mohamed.taman@gmail.com</email>
            <roles>
                <role>
                    Solutions Architect
                </role>
                <role>
                    Java Lead Software Architect
                </role>
            </roles>
        </developer>
    </developers>
    <!-- End - Flight Advisor API Project Owner -->

    <!-- Start - Flight Advisor API source repository -->
    <scm>
        <connection>https://github.com/mohamed-taman/Flight-Advisor.git</connection>
        <developerConnection>git@github.com:mohamed-taman/Flight-Advisor.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <!-- End - Flight Advisor API source repository -->

    <!-- Start - Flight Advisor API issue management -->
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/mohamed-taman/Flight-Advisor/projects/1</url>
    </issueManagement>
    <!-- End - Flight Advisor API issue management -->

    <licenses>
        <license>
            <name>MIT</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <properties>
        <java.version>22</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--  Dependencies versions properties  -->
        <maven.surefire.plugin.version>3.5.0</maven.surefire.plugin.version>
        <maven.failsafe.plugin.version>3.5.0</maven.failsafe.plugin.version>
        <io.jsonwebtoken.version>0.12.6</io.jsonwebtoken.version>
        <org.mapstruct.version>1.6.0</org.mapstruct.version>
        <org.springdoc.version>2.6.0</org.springdoc.version>
        <opencsv.version>5.9</opencsv.version>
        <hipster-core.version>1.0.1</hipster-core.version>
        <datasource-proxy-sbs.version>1.9.1</datasource-proxy-sbs.version>
        <commons-collections4.version>4.5.0-M2</commons-collections4.version>
    </properties>

    <dependencies>
        <!-- Start - Database, ORM, and validation dependencies -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- print meaningful SQL statements that were generated by any data access technology -->
        <dependency>
            <groupId>com.github.gavlyukovskiy</groupId>
            <artifactId>datasource-proxy-spring-boot-starter</artifactId>
            <version>${datasource-proxy-sbs.version}</version>

        </dependency>
        <!-- End - Database, ORM, and validation dependencies -->

        <!-- Start - Web, REST, and their OpenAPI dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${org.springdoc.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.yaml</groupId>
                    <artifactId>snakeyaml</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-hateoas</artifactId>
        </dependency>

        <!-- End - Web, REST, and their OpenAPI dependencies -->

        <!-- Start - Security dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>


        <!-- Start - JWT library for authentication libraries -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>${io.jsonwebtoken.version}</version>
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>${io.jsonwebtoken.version}</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
            <version>${io.jsonwebtoken.version}</version>
            <scope>runtime</scope>
        </dependency>
        <!-- End - JWT library for authentication libraries -->
        <!-- End - Security dependencies -->

        <!-- Start - Development and Ops dependencies, and third parties libraries -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- Lombok to automate setter/getter generation -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Mapper library to automate model transformations -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${org.mapstruct.version}</version>
        </dependency>

        <!-- library for writing, reading, serializing, deserializing, and/or parsing .csv files! -->
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>${opencsv.version}</version>
            <exclusions>
                <!--
                    To fix 78f40514-81ff-403b-9960-98145caab06f
                    https://advisory.checkmarx.net/advisory/vulnerability/Cx78f40514-81ff/
                -->
                <exclusion>
                    <groupId>commons-collections</groupId>
                    <artifactId>commons-collections</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>${commons-collections4.version}</version>
        </dependency>

        <!-- Add hipster-core instead of hipster-all for basic functionality. -->
        <dependency>
            <groupId>es.usc.citius.hipster</groupId>
            <artifactId>hipster-core</artifactId>
            <version>${hipster-core.version}</version>
        </dependency>
        <!-- End - Development and dependencies Ops, and third parties libraries -->

        <!-- Start - Testing dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- End - Testing dependencies -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <!-- Make final jar, a layered jar -->
                    <layers>
                        <enabled>true</enabled>
                    </layers>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <!--
                                To generate build information to be included via
                                http(s)://<hostname>:<port>/actuator/info
                             -->
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <enablePreview>true</enablePreview>
                    <compilerArgs>
                        <arg>-Xlint</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${org.mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                    <includes>
                        <include>**/*Tests.java</include>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe.plugin.version}</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
</project>
